css/style.scss
---
---

/* ===[ Global styling ]=== */

:root {
  /* Default colors */
  --primary: darkorchid;
  --secondary: linen;
  --accent-color: darkslateblue;

  /* Default fonts */
  --default-font: "Public Sans";
  --header-font: "Bungee Shade";
}

body {
  background-color: var(--secondary);
  color: #330000;
  font-family: var(--default-font), sans-serif;
}

h1, h2, h3, h4 { font-family: var(--header-font), serif; }

h1, h3, h4 {
  padding-top: 2rem;
  text-align: center;
}

h1 {
  color: var(--primary);
  padding-bottom: 3rem;
  padding-top: 7rem;
}

h2, h4 { color: var(--accent-color); }

@media screen and (min-width: 601px) {
  h1 { font-size: 5em; }
  h2 { font-size: 40pt; }
  h3 { font-size: 28pt; }
  h4 { font-size: 22pt;}
}

@media screen and (max-width: 600px) {
  h1 { font-size: 16vw; }
  h2 { font-size: 10vw; }
  h3 { font-size: 8vw; }
  h4 { font-size: 5vw; }
}



/* ===[ Site navigation styling ]=== */

.navbar { position: fixed; }

.dropdown-menu { background-color: var(--accent-color); }

.navbar li a {
  background-color: var(--primary);
  border-color: var(--accent-color);
  border-style: solid;
  color: var(--secondary);
  text-align: center;
}

.navbar li a:hover {
  background-color: royalblue;
  text-decoration: underline;
  text-decoration-color: skyblue;
  text-decoration-style: dotted;
}

@media screen and (min-width: 601px) {
  .navbar li a {
    font-size: 12pt;
  }
}

@media screen and (max-width: 600px) {
  .navbar li a {
    font-size: 10pt;
  }
}



/* ===[ Main body styling ]=== */

/* Center iframes on page */
main iframe {
  display: block;
  margin: 0 auto;
}

main .section img {
  display: block;
  margin: 0 auto;
  width: auto;
}

main .project {
  padding: 1% 0;
}

main .rounded-profile img {
  border-radius: 50%;
  display: block;
  margin-bottom: 3rem; margin-left: auto; margin-right: auto;
  height: auto;
}

@media screen and (min-width: 601px) {
  main .rounded-profile img { max-width: 250px; }
  main .section img { max-height: 5vw; }
}

@media screen and (max-width: 600px) {
  main .rounded-profile img { max-width: 140px; }
  main .section img { max-height: 20vw; }
}



/* ===[ Footer styling ]=== */

footer {
  color: var(--secondary);
  font-size: 10pt;
  overflow: hidden;
  text-align: center;
}

footer ul {
  display: block;
  list-style-type: none;
}

footer ul li { background-color: var(--primary); }

@media screen and (min-width: 601px) {
  footer ul li {
    margin-left: 12rem; margin-right: 12rem;
  }
}

@media screen and (max-width: 600px) {
  footer ul li {
    font-size: 12pt;
    margin-left: -2rem; margin-right: 1rem;
  }
}

footer ul li a {
  color: var(--secondary);
  text-decoration-style: dotted;
}

footer ul li a:hover {
  color: skyblue;
  text-decoration-style: dashed;
}

